--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,10 +18,9 @@ jobs:
        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       
     - name: Build the new release :latest
-      run: docker build -t hosniah/assurances-app:3.0 .
-
+      run: docker build -t nadimsnake/testsagem:tagnamev3 .
+      
     - name: Push to docker hub :latest
       uses: actions-hub/docker@master
       with:
-       args: push hosniah/assurances-app:3.0
- 
+       args: push  nadimsnake/testsagem:tagnamev2
